# AdventOfCode2024

./: .ocamlformat  Makefile  README.md  aoc2024.opam  dune-project
lib/: utils.ml  utils.mli
src/: dune
