(lang dune 3.17)

(name aoc2024)

(generate_opam_files true)

(source
 (github SamuelTrew/AdventOfCode2024))

(license Unlicense)

(authors "Samuel Trew")

(maintainers "Samuel Trew")

(package
 (name aoc2024)
 (synopsis "Advent of Code 2024 - OCaml")
 (description "Advent of Code 2024 - OCaml")
 (depends ocaml dune))
